Removed footer from index.html

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="container">
             <h2>Contact</h2>
             <div class="social-links">
-                <a href="" target="_blank">LinkedIn</a>
-                <a href="https://github.com/Mona-stery" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/maximilian-aitcheson-70b15b310/">LinkedIn</a>
+                <a href="https://github.com/Mona-stery">GitHub</a>
             </div>
             <form>
                 <label for="name">Name:</label>
@@ -82,9 +82,5 @@
             </form>
         </div>
     </section>
-
-    <footer>
-        <p>&copy; 2024 Maximilian Aitcheson. All rights reserved.</p>
-    </footer>
 </body>
 </html>
