Added Portfolio Entry

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="portfolio" class="section">
         <div class="container">
             <h2>Portfolio</h2>
-            <p>Work in Progress</p>
+            <p>This Website</p>
         </div>
     </section>
 </body>
