Added subtext to Portfolio entry

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div class="container">
             <h2>Portfolio</h2>
             <p>This Website</p>
+            <p>-This website is a work in progress to keep track of my progression on learning how to Code</p>
         </div>
     </section>
 </body>
